Ready for deployment

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hamoudi-benarba",
-  "homepage": "https://hamoudibenarba25.github.io/HamoudiBenarba",
+  "homepage": "https://hamoudibenarba25.github.io/HamoudiBenarba/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
